# par2query

./: Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac  configure.in
autom4te.cache/: output.0  traces.0  traces.1
src/: par2query.cpp
